@@ -1,3 +1,10 @@
+2004-12-12  Lutz Mueller <lutz@users.sourceforge.net>
+
+	Pointed out by Lars Ellenberg <l.g.e@web.de>:
+
+	* libexif/exif-loader.c: Honor indirect offsets in FUJI_RAW-files.
+	  Don't perform unnecessary checks for known data formats.
+
 2004-12-11  Lutz Mueller <lutz@users.sourceforge.net>
 
 	Inspired by suggestions from Lars Ellenberg <l.g.e@web.de>:
